# ChangeLog for media-gfx/sphinxcontrib-blockdiag
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sphinxcontrib-blockdiag-0.4 (08 Oct 2010)

  08 Oct 2010; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.4.ebuild:
  Version bump [198].

  06 Oct 2010; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.3.1.ebuild:
  Keyworded ~x86.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

*sphinxcontrib-blockdiag-0.3.1 (06 Oct 2010)

  06 Oct 2010; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.3.1.ebuild, +metadata.xml:
  Initial ebuild, by me.
