@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST sphinxcontrib-blockdiag-0.3.1.tar.gz 4201 RMD160 a39e10c9da6f2f8567cfbe897c1a8eaea3aea4dc SHA1 bc79c4a9b0a8782a1fcfb24680f509c2a701555c SHA256 f5f4e3b1583ff847f11638d206d1cf3274d0ab480b606c40c00d88aaac5d8e1e
 DIST sphinxcontrib-blockdiag-0.4.tar.gz 4193 RMD160 332ce08773dc52f6f1de68c48994f1b9dc37be58 SHA1 385179060b2ae68a9950d23a9925a3e968abde25 SHA256 74170b30885e50591925721112ceeb02f85f9b1551df79c48402a0818c1a1684
+DIST sphinxcontrib-blockdiag-0.5.tar.gz 4769 RMD160 e8cb15bb822a307f3930d3a577e3b55c4b082d6d SHA1 7e76279fd9443a1fcbd0fea9a3813760fae4b0c9 SHA256 706cff299a8dd420fa47b991d107d0be985d8eb031e27be31f6c2b01f3886190
 EBUILD sphinxcontrib-blockdiag-0.3.1.ebuild 655 RMD160 deed518030b6d3fad2a62f3c8f6cbb4bdb26f770 SHA1 6e600ed2a236982749054211a9d7eb07af47db83 SHA256 dc85f9627ed7794954dfc4419d653d6b5fda9b2ba8b0e5646d99b083a28a3504
 EBUILD sphinxcontrib-blockdiag-0.4.ebuild 663 RMD160 d40101da41a77178862805f6b174f03ce28ec0c9 SHA1 ff08345d07c6fb146112fab6fbf0874b37ece6ca SHA256 ceeceecf6692d8d1ad89bcb97e4de0414ec239ee9a0feb3e852f41af3c7c85bf
-MISC ChangeLog 653 RMD160 21cf456075d177c081174b4c94a728f6de9352c8 SHA1 785d6658af796243e01ba347334a06c26f041be6 SHA256 f5e24c6856be381daca4783a6475cc68ab9e38c0932e0c20492bdc8e0877879e
+EBUILD sphinxcontrib-blockdiag-0.5.ebuild 663 RMD160 d40101da41a77178862805f6b174f03ce28ec0c9 SHA1 ff08345d07c6fb146112fab6fbf0874b37ece6ca SHA256 ceeceecf6692d8d1ad89bcb97e4de0414ec239ee9a0feb3e852f41af3c7c85bf
+MISC ChangeLog 804 RMD160 5f91df8160848ea6c384d0ad2bebcabfb0cc7a70 SHA1 49d3c9788aeea41fd52b4f54a69b4acf4a522248 SHA256 72f60a7631a67ae0e477aaa36c304fc20e7f20c95168c8e4c37512e40c2d6b3d
 MISC metadata.xml 667 RMD160 a6b5fc4a97d6ce6aceab09dbba891726864d5cb8 SHA1 74611dacf4878870366e76f80d636e068a9331ab SHA256 138b5a95f114598614b5358ebe24e70a80b2278e252d650082815c1fabdce4e7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyu9C8ACgkQzJrj3cAXR0n+IgCdFqZIAWoLLLeI9Jb//fG1Tnll
-NuwAn2ALHSGJvT3nWlXqfanigNE0tVJ2
-=ezl6
+iEYEARECAAYFAkzKnu4ACgkQzJrj3cAXR0kiLQCgkH7uZ0huIbSkJHdPT435QU0/
+BiEAoIHkCk16Bq3Jt+E4zmsJYcDiakNb
+=xRiu
 -----END PGP SIGNATURE-----
