@@ -32,6 +32,8 @@ REM 2010-11-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/sphinxcontr
 REM 2010-11-11 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/sphinxcontrib-cheeseshop-0.2 %a
 REM 2010-11-28 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/blockdiag-0.5.1 %a
 REM 2010-11-28 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/blockdiag-0.5.1 %a
+REM 2010-11-28 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/sphinxcontrib-blockdiag-0.5.1 %a
+REM 2010-11-28 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/sphinxcontrib-blockdiag-0.5.1 %a
 REM 2010-12-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 sci-visualization/pycha-0.5.3 %a
 REM 2010-12-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 sci-visualization/pycha-0.5.3 %a
 REM 2010-12-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/showme-1.0.0 %a
