@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sphinxcontrib-blockdiag-0.5 (29 Oct 2010)
+
+  29 Oct 2010; James Rowe <jnrowe@gmail.com>
+  +sphinxcontrib-blockdiag-0.5.ebuild:
+  Version bump [214].
+
 *sphinxcontrib-blockdiag-0.4 (08 Oct 2010)
 
   08 Oct 2010; James Rowe <jnrowe@gmail.com>
